fix verse and translation alignment in traslation view

--- a/src/components/QuranReader/TranslationView/TranslationViewCell.module.scss
+++ b/src/components/QuranReader/TranslationView/TranslationViewCell.module.scss
@@ -24,8 +24,12 @@
   @include breakpoints.tablet {
     display: flex;
     justify-content: space-between;
+    padding-block: var(--spacing-small);
     [dir="ltr"] & {
       flex-direction: row-reverse;
+    }
+    & > .verseTranslationsContainer {
+      margin-block-start: var(--spacing-medium);
     }
     & > .verseTranslationsContainer,
     & > .arabicVerseContainer {
